Enable CDI to import files from Google Cloud Storage
